feat: json and error wrapper added ,swagger docs added
