# backend/cmd/api/main.go
@@ -4,11 +4,32 @@ import (
 	"github.com/Ayushmangit/mirrormate.git/internal/db"
 	"github.com/Ayushmangit/mirrormate.git/internal/env"
 	"github.com/Ayushmangit/mirrormate.git/internal/store"
+
+	_ "github.com/Ayushmangit/mirrormate.git/docs"
 )
 
+const version = "0.0.1" // semver
+
+//	@title			MirrorMate
+//	@description	SocialNetwork for hiring
+//	@termsOfService	http://swagger.io/terms/
+
+//	@contact.name	API Support
+//	@contact.url	http://www.swagger.io/support
+//	@contact.email	support@swagger.io
+
+//	@license.name	Apache 2.0
+//	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @BasePath					/v1
+//
+// @securityDefinitions.apikey	ApiKeyAuth
+// @in							header
+// @name						Authorization
+// @description
 func main() {
 	cfg := config{
-		addr: env.GetString("ADDR", "https://localhost:8080/v1"),
+		addr: env.GetString("ADDR", ":8080"),
 		db: dbConfig{
 			addr:         env.GetString("DB_ADDR", "postgres://admin:adminpassword@localhost:5433/mirrormate?sslmode=disable"),
 			maxIdleConns: env.GetInt("DB_MAX_IDLE_CONNS", 30),
